fix(header): menu overflow

--- a/src/components/global/header/header-interactive.scss
+++ b/src/components/global/header/header-interactive.scss
@@ -51,6 +51,7 @@
     left: 0;
     bottom: 0;
     padding: 8px 0;
+    overflow-y: auto;
     background: var(--color-background-focus);
     transition: visibility 0.15s, opacity 0.15s ease-in-out,
       transform 0.15s ease-in-out;
