--- a/src/root.css
+++ b/src/root.css
@@ -49,6 +49,7 @@
   --color-background-focus: #f4f4f4;
   --color-border: #e2e2e2;
   --color-divider: #8c8c8c;
+  --color-divider-light: #dcdad8;
   --color-disabled: rgba(0, 0, 0, 0.1);
   --color-disabled-text: rgba(100, 110, 117, 0.75);
 
